--- a/Index.html
+++ b/Index.html
@@ -1,196 +1,2 @@
-<!DOCTYPE html>
-<html lang="nl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VideoHub</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        body {
-            background-color: #111;
-            color: #fff;
-        }
-
-        header {
-            background-color: #000;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 15px 40px;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-
-        .logo {
-            font-size: 28px;
-            font-weight: bold;
-        }
-
-        .logo span {
-            background-color: #ff9900;
-            color: #000;
-            padding: 4px 8px;
-            border-radius: 4px;
-        }
-
-        nav a {
-            color: #ccc;
-            text-decoration: none;
-            margin: 0 15px;
-            font-size: 15px;
-            transition: 0.3s;
-        }
-
-        nav a:hover {
-            color: #ff9900;
-        }
-
-        .search-bar input {
-            padding: 8px 12px;
-            border-radius: 4px;
-            border: none;
-            width: 200px;
-        }
-
-        .container {
-            padding: 30px 40px;
-        }
-
-        h2 {
-            margin-bottom: 20px;
-            border-left: 5px solid #ff9900;
-            padding-left: 10px;
-        }
-
-        .video-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-            gap: 20px;
-        }
-
-        .video-card {
-            background-color: #1c1c1c;
-            border-radius: 8px;
-            overflow: hidden;
-            transition: transform 0.3s, box-shadow 0.3s;
-            cursor: pointer;
-        }
-
-        .video-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 15px rgba(255, 153, 0, 0.6);
-        }
-
-        .thumbnail {
-            width: 100%;
-            height: 140px;
-            background-color: #333;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #999;
-            font-size: 14px;
-        }
-
-        .video-info {
-            padding: 10px;
-        }
-
-        .video-title {
-            font-size: 14px;
-            margin-bottom: 5px;
-            color: #fff;
-        }
-
-        .video-meta {
-            font-size: 12px;
-            color: #aaa;
-        }
-
-        footer {
-            background-color: #000;
-            text-align: center;
-            padding: 20px;
-            margin-top: 40px;
-            color: #777;
-            font-size: 13px;
-        }
-
-        @media(max-width: 768px) {
-            header {
-                flex-direction: column;
-                gap: 15px;
-            }
-
-            .search-bar input {
-                width: 100%;
-            }
-        }
-    </style>
-</head>
-<body>
-
-<header>
-    <div class="logo">Video<span>Hub</span></div>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Categorieën</a>
-        <a href="#">Trending</a>
-        <a href="#">Nieuw</a>
-    </nav>
-    <div class="search-bar">
-        <input type="text" placeholder="Zoek video's...">
-    </div>
-</header>
-
-<div class="container">
-    <h2>Trending Video's</h2>
-    <div class="video-grid">
-        <div class="video-card">
-            <div class="thumbnail">Thumbnail</div>
-            <div class="video-info">
-                <div class="video-title">Voorbeeld Video Titel</div>
-                <div class="video-meta">1.2M weergaven • 2 dagen geleden</div>
-            </div>
-        </div>
-
-        <div class="video-card">
-            <div class="thumbnail">Thumbnail</div>
-            <div class="video-info">
-                <div class="video-title">Nog een Video Titel</div>
-                <div class="video-meta">856K weergaven • 1 week geleden</div>
-            </div>
-        </div>
-
-        <div class="video-card">
-            <div class="thumbnail">Thumbnail</div>
-            <div class="video-info">
-                <div class="video-title">Populaire Video</div>
-                <div class="video-meta">2.4M weergaven • 3 dagen geleden</div>
-            </div>
-        </div>
-
-        <div class="video-card">
-            <div class="thumbnail">Thumbnail</div>
-            <div class="video-info">
-                <div class="video-title">Nieuwe Upload</div>
-                <div class="video-meta">320K weergaven • Vandaag</div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<footer>
-    © 2026 VideoHub - Alle rechten voorbehouden
-</footer>
-
-</body>
-</html>
-
+<h1>ni</h1>
+<h2>NI...... errr...</h2>
